@@ -29,7 +29,7 @@
    "provides" : {
       "CSS::Sass" : {
          "file" : "lib/CSS/Sass.pm",
-         "version" : "v0.2.0"
+         "version" : "v0.3.0"
       }
    },
    "release_status" : "stable",
@@ -38,5 +38,5 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "v0.2.0"
+   "version" : "v0.3.0"
 }
