@@ -17,7 +17,7 @@ name: CSS-Sass
 provides:
   CSS::Sass:
     file: lib/CSS/Sass.pm
-    version: v0.2.0
+    version: v0.3.0
 resources:
   license: http://dev.perl.org/licenses/
-version: v0.2.0
+version: v0.3.0
