@@ -1,15 +1,0 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.4005
-use ExtUtils::MakeMaker;
-WriteMakefile
-(
-          'NAME' => 'CSS::Sass',
-          'VERSION_FROM' => 'lib/CSS/Sass.pm',
-          'PREREQ_PM' => {
-                           'ExtUtils::CBuilder' => 0,
-                           'Test::More' => 0
-                         },
-          'INSTALLDIRS' => 'site',
-          'EXE_FILES' => [],
-          'PL_FILES' => {}
-        )
-;
